tests/snapshots/visual_mode_test__V_yank_paste_lines.snap
---
source: tests/visual_mode_test.rs
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 4:0
Lines: 5

Buffer:
line 1
line 2
line 3line 1
line 2
[ ]
