tests/snapshots/visual_mode_test__gv_after_delete.snap
---
source: tests/visual_mode_test.rs
expression: test.snapshot_state()
---
Mode: Visual
Cursor: 0:0
Lines: 2

Buffer:
[l]ine 2
line 3
