tests/snapshots/visual_mode_test__gv_reselect.snap
---
source: tests/visual_mode_test.rs
expression: test.snapshot_state()
---
Mode: Visual
Cursor: 0:3
Lines: 1

Buffer:
hel[l]o world
