tests/snapshots/visual_mode_test__v_across_lines.snap
---
source: tests/visual_mode_test.rs
expression: test.snapshot_state()
---
Mode: Visual
Cursor: 2:0
Lines: 3

Buffer:
line 1
line 2
[l]ine 3
