tests/snapshots/visual_mode_test__v_change_word.snap
---
source: tests/visual_mode_test.rs
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 0:6
Lines: 1

Buffer:
goodby[e] world
