tests/snapshots/visual_mode_test__v_delete_selection.snap
---
source: tests/visual_mode_test.rs
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 0:0
Lines: 1

Buffer:
[o] world
