tests/snapshots/visual_mode_test__v_empty_line.snap
---
source: tests/visual_mode_test.rs
expression: test.snapshot_state()
---
Mode: Visual
Cursor: 2:0
Lines: 3

Buffer:
hello

[w]orld
