tests/snapshots/visual_mode_test__v_end_of_line.snap
---
source: tests/visual_mode_test.rs
expression: test.snapshot_state()
---
Mode: Visual
Cursor: 0:4
Lines: 1

Buffer:
hell[o]
