tests/snapshots/visual_mode_test__v_escape_cancels.snap
---
source: tests/visual_mode_test.rs
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 0:3
Lines: 1

Buffer:
hel[l]o world
