tests/snapshots/visual_mode_test__v_select_entire_file.snap
---
source: tests/visual_mode_test.rs
expression: test.snapshot_state()
---
Mode: Visual
Cursor: 0:0
Lines: 3

Buffer:
[l]ine 1
line 2
line 3
