tests/snapshots/visual_mode_test__v_select_indentation.snap
---
source: tests/visual_mode_test.rs
expression: test.snapshot_state()
---
Mode: Visual
Cursor: 0:3
Lines: 1

Buffer:
   [ ]indented line
